--- a/res/values/superior_strings.xml
+++ b/res/values/superior_strings.xml
@@ -181,5 +181,22 @@
     <string name="display_rotation_90_title">90 degrees</string>
     <string name="display_rotation_180_title">180 degrees</string>
     <string name="display_rotation_270_title">270 degrees</string>
+   
+   <!-- Sizes for pattern lockscreen -->
+    <string name="lock_pattern_size_3" translatable="false">3 \u00d7 3</string>
+    <string name="lock_pattern_size_4" translatable="false">4 \u00d7 4</string>
+    <string name="lock_pattern_size_5" translatable="false">5 \u00d7 5</string>
+    <string name="lock_pattern_size_6" translatable="false">6 \u00d7 6</string>
+    <string name="lock_settings_picker_pattern_size_message">Choose a pattern size</string>
+
+   <!-- Whether a visible red line will be drawn after the user has drawn the unlock pattern incorrectly -->
+   <string name="lockpattern_settings_enable_error_path_title">Show pattern error</string>
+
+   <!-- Whether the dots will be drawn when using the lockscreen pattern -->
+   <string name="lockpattern_settings_enable_dots_title">Show pattern dots</string>
+
+   <!-- Lock screen vibrate settings -->
+   <string name="lockscreen_vibrate_enabled_title">Vibrate</string>
+   <string name="lockscreen_vibrate_enabled_head">Vibrate when unlocking</string>
 
 </resources>
