Allow to quickly open Running Services from QS panel [2/2]
Change-Id: I8f1bc70d75aa2f07031f30a2fd408e220b8574e6
Signed-off-by: mydongistiny <jaysonedson@gmail.com>

--- a/res/values/superior_strings.xml
+++ b/res/values/superior_strings.xml
@@ -423,4 +423,8 @@
     <string name="filter_substratum_apps">Substratum overlays</string>
     <string name="menu_show_substratum">Show overlays</string>
     <string name="menu_hide_substratum">Hide overlays</string>
+
+    <!-- Running services -->
+    <string name="background_processes_settings_title">Background processes</string>
+
 </resources>
