Allow to quickly open Running Services from QS panel [2/2]
Change-Id: I8f1bc70d75aa2f07031f30a2fd408e220b8574e6
Signed-off-by: mydongistiny <jaysonedson@gmail.com>
Signed-off-by: Shubham Singh <coolsks94@gmail.com>
Signed-off-by: Jayant-Deshmukh <jayantdeshmuk008@gmail.com>

--- a/res/values/superior_strings.xml
+++ b/res/values/superior_strings.xml
@@ -416,4 +416,7 @@
     <string name="lockscreen_rotation_title">Auto-rotate lockscreen</string>
     <string name="lockscreen_rotation_summary">Allow rotation on the lockscreen</string>
 
+    <!-- Running services -->
+    <string name="background_processes_settings_title">Background processes</string>
+
 </resources>
