Settings: Introduce Substratum changes
* Add toggle to force bypass of authorisation checks in the
  SubstratumService. This is only accessible to owner accounts.
* Add ApplicationsState filter for Substratum overlays in All
  apps list.

Change-Id: I4d8ca60ead6fe058e7bc2ef8b7613e77457b3f27
[Surge1223: Rewrite to use a PreferenceController class]
Signed-off-by: Harsh Shandilya <harsh@prjkt.io>
Signed-off-by: mydongistiny <jaysonedson@gmail.com>
Signed-off-by: xyyx <xyyx@mail.ru>

Signed-off-by: Sipun Ku Mahanta <sipunkumar85@gmail.com>

--- a/res/values/superior_strings.xml
+++ b/res/values/superior_strings.xml
@@ -409,4 +409,13 @@
     <string name="font_picker_progress">Applying your desired font\u2026</string>
 
     <string name="battery_temp">Battery temperature</string>
+	
+    <!-- Force authorize substratum packages -->
+    <string name="force_authorize_substratum_packages_title">Force authorize every theme app</string>
+    <string name="force_authorize_substratum_packages_summary">Allow theme apps from unknown sources</string>
+	
+    <!-- Manage applications: show substratum overlays -->
+    <string name="filter_substratum_apps">Substratum overlays</string>
+    <string name="menu_show_substratum">Show overlays</string>
+    <string name="menu_hide_substratum">Hide overlays</string>
 </resources>
