Settings: Add back increasing ring feature (2/3)
Signed-off-by: Sipun Ku Mahanta <sipunkumar85@gmail.com>
Change-Id: I5aff1c9244b5b51ee2a5345e78930510775f9c23

--- a/res/values/superior_attrs.xml
+++ b/res/values/superior_attrs.xml
@@ -13,6 +13,7 @@
  -->
 
 <resources>
+
     <!-- Interval seekbar -->
     <declare-styleable name="IntervalSeekBar">
         <attr name="minI" format="float" />
@@ -20,4 +21,7 @@
         <attr name="defaultValuePure" format="float" />
         <attr name="digits" format="integer" />
     </declare-styleable>
+	
+    <attr name="customPreferenceStyle" format="reference" />
+
 </resources>
