Settings: Disable system theme preferences when Substratum overlays are enabled
Rather than unconditionally disabling system themes when Substratum is detected,
only do so when there is a Substratum theme applied to the framework.

Improves on a (not so) similar commit by Alex Cruz.

Change-Id: If1b601a7184c96fc33347da2cfff5ac2f2d7aca7
Signed-off-by: Harsh Shandilya <harsh@prjkt.io>

--- a/res/values/superior_strings.xml
+++ b/res/values/superior_strings.xml
@@ -71,6 +71,7 @@
     <string name="system_theme_style_superior">Superior</string>
     <string name="applying_theme_toast">Applying theme, please wait...</string>
     <string name="theme_applied_toast">Theme applied!</string>
+    <string name="substratum_installed_title">System themes are unavailable because a Substratum overlay is installed. Please uninstall all overlays targeting Android System to proceed.</string>
 
     <!-- device maintainer -->
     <string name="device_maintainer">Your Noob Guy</string>
