Add Font preference for font manager
Change-Id: I452df5ab1ca88a87bd801e8ab75b37fe7aafe7d6
Signed-off-by: Sipun Ku Mahanta <sipunkumar85@gmail.com>

--- a/res/values/superior_strings.xml
+++ b/res/values/superior_strings.xml
@@ -411,4 +411,8 @@
     <string name="filter_substratum_apps">Substratum overlays</string>
     <string name="menu_show_substratum">Show overlays</string>
     <string name="menu_hide_substratum">Hide overlays</string>
+
+    <!-- Font picker -->
+    <string name="font_picker_title">Font</string>
+
 </resources>
