--- a/res/xml/display_settings.xml
+++ b/res/xml/display_settings.xml
@@ -150,6 +150,11 @@
         android:key="theme_category"
         android:title="@string/theme_category_title">
 
+    <com.android.settings.display.FontDialogPreference
+        android:key="custom_font"
+        android:title="@string/font_picker_title"
+        android:persistent="false" />
+
     <ListPreference
         android:key="system_theme_style"
         android:title="@string/system_theme_style_title"
