--- a/res/values/superior_strings.xml
+++ b/res/values/superior_strings.xml
@@ -413,6 +413,6 @@
     <string name="menu_hide_substratum">Hide overlays</string>
 
     <!-- Font picker -->
-    <string name="font_picker_title">Font</string>
-
+    <string name="font_picker_title">Font Manager</string>
+    <string name="font_picker_progress">Applying your desired font\u2026</string>
 </resources>
