Allow users to use system themes alongside subs [1/2]
 Themes,accent are disabled if substratum is installed.
 User might just need to use substratum to enable round corner, use custom navbar
 icons,use custom accent etc alongside system theme. Hence allow users to use them alongside substratum.
 Show a proper warning to user on enabling this.

Change-Id: I98d60486e3df64cee468281297ccae1941d114ca
Signed-off-by: Shubham Singh <coolsks94@gmail.com>

--- a/res/values/superior_strings.xml
+++ b/res/values/superior_strings.xml
@@ -72,6 +72,10 @@
     <string name="applying_theme_toast">Applying theme, please wait...</string>
     <string name="theme_applied_toast">Theme applied!</string>
     <string name="substratum_installed_title">System themes are unavailable because a Substratum overlay is installed. Please uninstall all overlays targeting Android System to proceed.</string>
+    <string name="force_allow_system_themes_title">Allow system themes and fonts alongside substratum</string>
+    <string name="force_allow_system_themes_summary">Allows you to use following themes and fonts options inspite of substratum installed.</string>
+    <string name="force_theme_warning_title">Warning !</string>
+    <string name="force_theme_warning_message">This could cause conflicts between substratum themes and system themes. We hope you know what are you getting into. #DontBlameUsLater :D</string>
 
     <!-- device maintainer -->
     <string name="device_maintainer">Your Noob Guy</string>
