--- a/res/xml/display_settings.xml
+++ b/res/xml/display_settings.xml
@@ -154,6 +154,12 @@
         android:title="@string/font_picker_title"
         android:persistent="false" />
 
+    <com.superior.settings.preferences.SystemSettingSwitchPreference
+         android:key="force_allow_system_themes"
+         android:title="@string/force_allow_system_themes_title"
+         android:summary="@string/force_allow_system_themes_summary"
+         android:defaultValue="false" />
+
     <ListPreference
         android:key="systemui_theme_style"
         android:title="@string/systemui_theme_style_title"
