--- a/res/values/superior_strings.xml
+++ b/res/values/superior_strings.xml
@@ -199,4 +199,10 @@
    <string name="lockscreen_vibrate_enabled_title">Vibrate</string>
    <string name="lockscreen_vibrate_enabled_head">Vibrate when unlocking</string>
 
+    <!-- Custom light color -->
+    <string name="custom_light_title">Light color</string>
+    <string name="custom_light_on_time_title">Light ON time during led pulse (ms)</string>
+    <string name="custom_light_off_time_title">Light OFF time during led pulse (ms)"</string>
+    <string name="value_equals_default">Def</string>
+    <string name="show_light_on_zen_title">Blink during Do Not Disturb</string>
 </resources>
