Rearrange density options under Settings/Display
Change-Id: I7a4c7eca086945b2b5367ffb952deb6c635a1f0a
Signed-off-by: Sipun Ku Mahanta <sipunkumar85@gmail.com>

--- a/res/values/superior_strings.xml
+++ b/res/values/superior_strings.xml
@@ -225,5 +225,8 @@
     <string name="selinux_status_disabled">Disabled</string>
     <string name="selinux_status_permissive">Permissive</string>
     <string name="selinux_status_enforcing">Enforcing</string>
+	
+    <!-- Density category -->
+    <string name="density_category">Density options</string>
 
 </resources>
