--- a/res/layout/dialog_firmware_version.xml
+++ b/res/layout/dialog_firmware_version.xml
@@ -28,15 +28,17 @@
        <LinearLayout
     	   android:gravity="center"
 	   android:layout_width="match_parent"
-	   android:layout_height="wrap_content"
+	   android:layout_height="16dp"
            android:selectable="false">
 
            <ImageView
 	       android:layout_width="match_parent"
  	       android:layout_height="match_parent"
+ 	       android:layout_marginLeft="36dp"
+ 	       android:layout_marginRight="36dp"
 	       android:src="@drawable/ic_superior_banner"
 	       android:adjustViewBounds="true"
-	       android:scaleType="centerInside" />
+	       android:scaleType="fitCenter" />
 
         </LinearLayout>
 
