Revert "settings: Little bit banner adjustment"
This reverts commit 233c3a518ec2b1c7d7ffb6c86b2a244283cef6cc.

--- a/res/layout/dialog_firmware_version.xml
+++ b/res/layout/dialog_firmware_version.xml
@@ -28,17 +28,15 @@
        <LinearLayout
     	   android:gravity="center"
 	   android:layout_width="match_parent"
-	   android:layout_height="16dp"
+	   android:layout_height="wrap_content"
            android:selectable="false">
 
            <ImageView
 	       android:layout_width="match_parent"
  	       android:layout_height="match_parent"
- 	       android:layout_marginLeft="36dp"
- 	       android:layout_marginRight="36dp"
 	       android:src="@drawable/ic_superior_banner"
 	       android:adjustViewBounds="true"
-	       android:scaleType="fitCenter" />
+	       android:scaleType="centerInside" />
 
         </LinearLayout>
 
