--- a/res/values/superior_colors.xml
+++ b/res/values/superior_colors.xml
@@ -17,6 +17,11 @@
  <resources>
    <color name="accent_picker_white_accent">@android:color/white</color>
    <color name="accent_picker_dark_accent">@android:color/black</color>
-   <color name="ic_settings_background">#343434</color>
+   
+   <!-- Launcher icon background -->
+    <color name="ic_settings_background">#343434</color>
+	
+	<!-- App ops -->
+    <color name="switch_accent_color">@*android:color/accent_device_default_light</color>
 
 </resources>
