--- a/res/values/superior_strings.xml
+++ b/res/values/superior_strings.xml
@@ -170,7 +170,7 @@
     <string name="theme_applied_toast">Theme applied!</string>
 
     <!-- device maintainer -->
-    <string name="device_maintainer">Your God</string>
+    <string name="device_maintainer">Your Noob Guy</string>
 
     <!-- Display : Rotation -->
     <string name="display_rotation_title">Rotation</string>
