--- a/res/values/superior_strings.xml
+++ b/res/values/superior_strings.xml
@@ -229,4 +229,14 @@
     <!-- Density category -->
     <string name="density_category">Density options</string>
 
+    <!-- Ambient Play -->
+    <string name="ambient_play_title" translatable="false">@*android:string/ambient_recognition_notification</string>
+    <string name="ambient_play_summary">Show nearby songs</string>
+    <string name="ambient_play_lockscreen_title">Show songs on lock screen</string>
+    <string name="ambient_play_notifications_title">Notifications</string>
+    <string name="ambient_play_switch_bar_on">On</string>
+    <string name="ambient_play_switch_bar_off">Off</string>
+    <string name="ambient_play_help_text">When music is playing nearby, you can see the song name and artist. Battery life and data usage may be affected if this is enabled.</string>
+
+
 </resources>
