--- a/res/values/superior_strings.xml
+++ b/res/values/superior_strings.xml
@@ -406,4 +406,6 @@
     <!-- Font picker -->
     <string name="font_picker_title">Font Manager</string>
     <string name="font_picker_progress">Applying your desired font\u2026</string>
+
+    <string name="battery_temp">Battery temperature</string>
 </resources>
