--- a/res/xml/my_device_info.xml
+++ b/res/xml/my_device_info.xml
@@ -41,6 +41,12 @@
         android:title="@string/my_device_info_account_preference_title"
         android:summary="@string/summary_placeholder"/>
 
+    <!-- Device Maintainer -->
+    <Preference
+        android:key="device_maintainer"
+        android:title="@string/device_maintainer"
+        android:summary="@string/device_info_default" />
+
     <!-- Phone number -->
     <Preference
         android:key="phone_number"
