--- a/res/xml/my_device_info.xml
+++ b/res/xml/my_device_info.xml
@@ -52,6 +52,7 @@
     <!-- Device Maintainer -->
     <Preference
         android:key="device_maintainer"
+        android:order="4"
         android:title="@string/device_maintainer"
         android:summary="@string/device_info_default" />
 
