--- a/res/values/superior_strings.xml
+++ b/res/values/superior_strings.xml
@@ -58,18 +58,18 @@
     
     <!-- Scramble PIN Layout on Lockscreen -->
     <string name="unlock_scramble_pin_layout_title">Scramble layout</string>
-    <string name="unlock_scramble_pin_layout_summary">Scramble PIN layout when unlocking device</string>
-    
-    <string name="theme_category_title">System theme</string>
-    
+    <string name="unlock_scramble_pin_layout_summary">Scramble PIN layout when unlocking device</string>    
+  
     <!-- SystemUI theme -->
-    <string name="systemui_theme_style_title">SystemUI theme</string>
-    <string name="systemui_theme_style_auto">Automatic (wallpaper based)</string>
-    <string name="systemui_theme_style_light">Light</string>
-    <string name="systemui_theme_style_dark">Dark</string>
+    <string name="theme_category_title">System theme</string>
+    <string name="system_theme_style_title">SystemUI theme</string>
+    <string name="system_theme_style_auto">Automatic (wallpaper based)</string>
+    <string name="system_theme_style_light">Light</string>
+    <string name="system_theme_style_dark">Dark</string>
     <string name="system_theme_style_black">Black</string>
     <string name="applying_theme_toast">Applying theme, please wait...</string>
     <string name="theme_applied_toast">Theme applied!</string>
+    <string name="ui_style_applied_toast">System UI theme applied!</string>
 
     <!-- device maintainer -->
     <string name="device_maintainer">Your Noob Guy</string>
