--- a/res/xml/display_settings.xml
+++ b/res/xml/display_settings.xml
@@ -145,25 +145,26 @@
             android:key="density"
             android:title="@string/developer_smallest_width" />
     </PreferenceCategory>
+
     <PreferenceCategory
         android:key="theme_category"
         android:title="@string/theme_category_title">
 
     <ListPreference
-        android:key="systemui_theme_style"
-        android:title="@string/systemui_theme_style_title"
-        android:entries="@array/systemui_theme_style_entries"
-        android:entryValues="@array/systemui_theme_style_values"
+        android:key="system_theme_style"
+        android:title="@string/system_theme_style_title"
+        android:entries="@array/system_theme_style_entries"
+        android:entryValues="@array/system_theme_style_values"
         android:persistent="false" />
+
+    <Preference
+        android:key="accent_picker"
+	android:title="@string/theme_accent_picker_title" />
 
     <Preference
         android:key="vr_display_pref"
         android:title="@string/display_vr_pref_title"
         android:fragment="com.android.settings.display.VrDisplayPreferencePicker" />
-
-    <Preference
-        android:key="accent_picker"
-	android:title="@string/theme_accent_picker_title" />
     </PreferenceCategory >
 
 </PreferenceScreen>
