--- a/res/values/superior_strings.xml
+++ b/res/values/superior_strings.xml
@@ -62,7 +62,7 @@
   
     <!-- SystemUI theme -->
     <string name="theme_category_title">System theme</string>
-    <string name="system_theme_style_title">SystemUI theme</string>
+    <string name="system_theme_style_title">System theme</string>
     <string name="system_theme_style_auto">Automatic (wallpaper based)</string>
     <string name="system_theme_style_light">Light</string>
     <string name="system_theme_style_dark">Dark</string>
