Add Font preference for font manager
Change-Id: I452df5ab1ca88a87bd801e8ab75b37fe7aafe7d6
Signed-off-by: Sipun Ku Mahanta <sipunkumar85@gmail.com>

--- a/res/xml/display_settings.xml
+++ b/res/xml/display_settings.xml
@@ -149,6 +149,11 @@
         android:key="theme_category"
         android:title="@string/theme_category_title">
 
+    <com.android.settings.display.FontDialogPreference
+        android:key="custom_font"
+        android:title="@string/font_picker_title"
+        android:persistent="false" />
+
     <ListPreference
         android:key="systemui_theme_style"
         android:title="@string/systemui_theme_style_title"
