--- a/res/values/superior_strings.xml
+++ b/res/values/superior_strings.xml
@@ -402,4 +402,8 @@
 	
     <!-- Volume link notification -->
     <string name="volume_link_notification_title">Link ring &amp; notification volumes</string>
+
+    <!-- Font picker -->
+    <string name="font_picker_title">Font Manager</string>
+    <string name="font_picker_progress">Applying your desired font\u2026</string>
 </resources>
