--- a/res/values/superior_arrays.xml
+++ b/res/values/superior_arrays.xml
@@ -45,13 +45,15 @@
         <item>@string/systemui_theme_style_auto</item>
         <item>@string/systemui_theme_style_light</item>
         <item>@string/systemui_theme_style_dark</item>
-	<item>@string/system_theme_style_black</item>
+        <item>@string/system_theme_style_black</item>
+        <item>@string/system_theme_style_superior</item>
     </string-array>
      <string-array name="systemui_theme_style_values" translatable="false">
         <item>0</item>
         <item>1</item>
         <item>2</item>
         <item>3</item>
+        <item>4</item>
     </string-array>
 
     <!-- Expanded Desktop -->
