--- a/res/values/superior_strings.xml
+++ b/res/values/superior_strings.xml
@@ -68,6 +68,7 @@
     <string name="systemui_theme_style_light">Light</string>
     <string name="systemui_theme_style_dark">Dark</string>
     <string name="system_theme_style_black">Black</string>
+    <string name="system_theme_style_superior">Superior</string>
     <string name="applying_theme_toast">Applying theme, please wait...</string>
     <string name="theme_applied_toast">Theme applied!</string>
 
