Settings: Changes for LiveDisplay
All credits to LineageOS and related authors on:

https://github.com/LineageOS/android_packages_apps_LineageParts

Syberia: Forward port to 10 and migrate to androidx

Change-Id: Ibf12e0141947cbffa74b3c005d10efc11dfc591d
Signed-off-by: Henrique Silva <jhenrique09.mcz@hotmail.com>
Signed-off-by: DennySPB <dennyspb@gmail.com>
Signed-off-by: Jayant-Deshmukh <jayantdeshmuk008@gmail.com>

--- a/res/drawable/color_tuning_preview.xml
+++ b/res/drawable/color_tuning_preview.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--
-     Copyright (C) 2018-2020 Superior OS Project
+<!-- Copyright (C) 2013 The CyanogenMod Project
 
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
@@ -14,8 +13,12 @@
      See the License for the specific language governing permissions and
      limitations under the License.
 -->
-<resources>
-	<declare-styleable name="Themes">
-        <attr name="waveViewStyle" format="reference"/>
-    </declare-styleable>
-</resources>
+
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle">
+
+    <gradient
+        android:angle="0"
+        android:startColor="#000000"
+        android:endColor="#FFFFFF" />
+</shape>
