--- a/res/values/superior_attrs.xml
+++ b/res/values/superior_attrs.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
-     Copyright (C) 2018-2020 Superior OS Project
-
+     Copyright (C) 2017 The LineageOS Project
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
      You may obtain a copy of the License at
@@ -14,8 +13,13 @@
      See the License for the specific language governing permissions and
      limitations under the License.
 -->
+
 <resources>
-	<declare-styleable name="Themes">
-        <attr name="waveViewStyle" format="reference"/>
+    <!-- Interval seekbar -->
+    <declare-styleable name="IntervalSeekBar">
+        <attr name="minI" format="float" />
+        <attr name="maxI" format="float" />
+        <attr name="defaultValuePure" format="float" />
+        <attr name="digits" format="integer" />
     </declare-styleable>
 </resources>
