Settings: Lockscreen rotation config support [2/2]
Signed-off-by: Jayant-Deshmukh <jayantdeshmuk008@gmail.com>
Change-Id: Iaaa4732227b67d262e538b2e5a4f33521050ae1e

--- a/res/values/superior_strings.xml
+++ b/res/values/superior_strings.xml
@@ -412,4 +412,8 @@
     <string name="adj_intensity_title">Intensity</string>
     <string name="adj_contrast_title">Contrast</string>
 
+    <!-- Lockscreen rotation -->
+    <string name="lockscreen_rotation_title">Auto-rotate lockscreen</string>
+    <string name="lockscreen_rotation_summary">Allow rotation on the lockscreen</string>
+
 </resources>
