--- a/res/xml/display_rotation.xml
+++ b/res/xml/display_rotation.xml
@@ -22,6 +22,13 @@
         android:key="accelerometer"
         android:title="@string/accelerometer_title" />
 
+    <com.superior.settings.preferences.SystemSettingSwitchPreference
+        android:key="lockscreen_rotation"
+        android:title="@string/lockscreen_rotation_title"
+        android:summary="@string/lockscreen_rotation_summary"
+        android:defaultValue="false"
+        android:dependency="accelerometer" />
+
     <PreferenceCategory
         android:key="display_rotation_category"
         android:title="@string/display_rotation_category_title" />
