Settings: Make Superior version & build date unclickable
Signed-off-by: Sipun Ku Mahanta <sipunkumar85@gmail.com>
Change-Id: I37cbe94c9074273d1752bb4688053785a0392225

--- a/res/xml/firmware_version.xml
+++ b/res/xml/firmware_version.xml
@@ -40,6 +40,7 @@
          android:title="@string/superior_version"
          android:summary="@string/summary_placeholder"
          settings:enableCopying="true"
+         android:selectable="false"
          settings:controller="com.android.settings.deviceinfo.firmwareversion.SuperiorVersionPreferenceController"/>
 
 
@@ -74,6 +75,7 @@
         android:title="@string/build_date"
         android:summary="@string/build_date_default"
         settings:enableCopying="true"
+        android:selectable="false"
         settings:controller="com.android.settings.deviceinfo.firmwareversion.BuildDatePreferenceController"/>
 
     <!-- Kernel -->
