--- a/res/values/superior_colors.xml
+++ b/res/values/superior_colors.xml
@@ -17,7 +17,7 @@
 <resources>
 
     <!-- SuperiorSettings Color -->
-    <color name="homepage_superior_background">#536dfe</color>
+    <color name="homepage_superior_background">@*android:color/accent_device_default_light</color>
 
     <!-- Shortcuts -->
     <color name="icon_accent_custom">@*android:color/accent_device_default_light</color> 
