Settings: Add notification log to search index
Change-Id: I05ca3127a57bc0419543f63afab2d6aaee8c3565
Signed-off-by: Sipun Ku Mahanta <sipunkumar85@gmail.com>

--- a/res/values/superior_strings.xml
+++ b/res/values/superior_strings.xml
@@ -412,4 +412,7 @@
     <string name="adj_intensity_title">Intensity</string>
     <string name="adj_contrast_title">Contrast</string>
 
+    <!-- Search keywords -->
+    <string name="keywords_notification_log">notifications, notification log</string>
+
 </resources>
